--- a/style/dashboard/style.css
+++ b/style/dashboard/style.css
@@ -196,6 +196,7 @@ ul li a {
     color: #000000;
     display: block;
     padding: 20px 30px;
+    white-space: nowrap;
 }
 
 .active {
